# yy_maths

./: CMakeLists.txt  yy_diagonal_matrix.hpp  yy_ekf.cpp  yy_ekf.hpp  yy_fib.hpp  yy_identity_matrix.hpp  yy_mathsConfig.cmake  yy_matrix.hpp  yy_matrix_fmt.hpp  yy_matrix_fwd.hpp  yy_matrix_util.hpp
examples/: CMakeLists.txt  ekf.cpp
